force-app/main/default/objects/Property__c/Property__c.object-meta.xml
<CustomObject>
    <label>Imóvel</label>
    <nameField>
        <label>Nome do Imóvel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imóveis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>