force-app/main/default/objects/Property__c/fields/OwnerShipForRent__c.field-meta.xml
<CustomField>
    <fullName>OwnerShipForRent__c</fullName>
    <label>Responsável pelo Anúncio Aluguel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OwnershipValues</valueSetName>
    </valueSet>
</CustomField>