force-app/main/default/objects/Property__c/fields/PartnerId__c.field-meta.xml
<CustomField>
    <fullName>PartnerId__c</fullName>
    <label>PartnerId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>