force-app/main/default/objects/Property__c/fields/RegistrarId__c.field-meta.xml
<CustomField>
    <fullName>RegistrarId__c</fullName>
    <label>RegistrarId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>