force-app/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>excluido</fullName>
                <label>Excluído</label>
            </value>
            <value>
                <fullName>edicao</fullName>
                <label>Em edição</label>
            </value>
            <value>
                <fullName>aguardando_publicacao</fullName>
                <label>Aguardando Publicação</label>
            </value>
            <value>
                <fullName>publicado</fullName>
                <label>Publicado</label>
            </value>
            <value>
                <fullName>alugado</fullName>
                <label>Alugado</label>
            </value>
            <value>
                <fullName>suspenso</fullName>
                <label>Suspenso</label>
            </value>
            <value>
                <fullName>despublicado</fullName>
                <label>Despublicado</label>
            </value>
            <value>
                <fullName>edicaoSemUsuario</fullName>
                <label>Em edição sem usuário</label>
            </value>
            <value>
                <fullName>edicaoUsuarioNaoConfirmado</fullName>
                <label>Em edição com usuário não confirmado</label>
            </value>
            <value>
                <fullName>emNegociacao</fullName>
                <label>Em negociação</label>
            </value>
            <value>
                <fullName>vendido</fullName>
                <label>Vendido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>