force-app/main/default/objects/Property__c/fields/StatusForRent__c.field-meta.xml
<CustomField>
    <fullName>StatusForRent__c</fullName>
    <label>Status For Rent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EDITING</fullName>
                <label>Em Edição</label>
            </value>
            <value>
                <fullName>PUBLISHED</fullName>
                <label>Publicado</label>
            </value>
            <value>
                <fullName>SUSPENDED</fullName>
                <label>Suspenso</label>
            </value>
            <value>
                <fullName>UNPUBLISHED</fullName>
                <label>Despublicado</label>
            </value>
            <value>
                <fullName>OPTED_OUT</fullName>
                <label>Opted-out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>